--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>WikiArt</title>
         <link rel="stylesheet" href="siteFinal.css">
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <link rel="icon" href="../sitezin final/Render Pincel - Premium Design 3D (7).png">    
+        <link rel="icon" href="sitezin final/Render Pincel - Premium Design 3D (7).png">    
     </head>
     <body>
         <script> let entrada = prompt("Você gosta de arte? Sim ou sim? Haha");
@@ -36,7 +36,7 @@
         </nav>
         <main>
             <div id="fridapintura">
-            <img src="../sitezin final/imagens/5749114274_62cb56bdab_b.gif">
+            <img src="imagens/5749114274_62cb56bdab_b.gif">
             </div>
             <a href="" name="introducao"></a>
             <h5>Pintura feita por Frida Kahlo</h5>
